--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ dblp_url: # your DBLP profile url
 stackoverflow_id: # your stackoverflow id
 kaggle_id: # your kaggle id
 lastfm_id: # your lastfm id
-spotify_id: mgwy # your spotify id
+spotify_id: 31sa56yqnjsdd3r42bjxecijm4de # your spotify id
 pinterest_id: # your pinterest id
 unsplash_id: # your unsplash id
 instagram_id: # your instagram id
