--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -11,7 +11,7 @@
   contents:
     - title: B.S. Computer Science, B.S. Data Science & Statistics
       institution: University of California, Santa Barbara
-      year: 1905
+      year: 2021-2025
       description:
         - 3.8/4.0 GPA
         - UC Regents Scholar (top 1% of admitted class)
